[package]
name = "luarmor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_with = "3.1.0"
strum = { version = "0.25.0", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["full"] }
