[package]
name = "luarmor"
description = "A simple API wrapper for luarmor.net"
readme = "README.md"
repository = "https://github.com/Stefanuk12/luarmor-rs/"
homepage = "https://github.com/Stefanuk12/luarmor-rs/"
license = "MIT"
keywords = ["luarmor", "api", "wrapper"]
categories = ["api-bindings", "asynchronous"]
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_with = "3.1.0"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.44"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["full"] }
