[package]
name = "luarmor"
description = "A simple API wrapper for luarmor.net"
readme = "README.md"
repository = "https://github.com/Stefanuk12/luarmor-rs/"
homepage = "https://github.com/Stefanuk12/luarmor-rs/"
license = "MIT"
keywords = ["luarmor", "api", "wrapper"]
categories = ["api-bindings", "asynchronous"]
version = "0.3.0"
edition = "2024"

[dependencies]
api_builder = { version = "0.1.0", default-features = false, features = ["derive"] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["serde"] }
typed-builder = "0.21"

[dev-dependencies]
api_builder = { version = "0.1.0", default-features = false, features = ["derive", "reqwest_blocking"] }
dotenv = "0.15"
reqwest = { version = "0.12", features = ["blocking"] }
